force-app/main/default/objects/DU_Contract__c/DU_Contract__c.object-meta.xml
<CustomObject>
    <description>CDM: A contract is an agreement defining the terms of business between parties. A custom contract is used as sharing &amp; visibility limitation of the standard contract does not allow using it within the VWFS setup.</description>
    <label>Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>