force-app/main/default/objects/DU_Contract__c/fields/DU_AccountId__c.field-meta.xml
<CustomField>
    <fullName>DU_AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the contract to the account (customer)
Availability 1.6.0.13</description>
    <inlineHelpText>Relates the contract to the account (customer)</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>DU_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>