force-app/main/default/objects/DU_Contract__c/fields/DU_ActualEquity__c.field-meta.xml
<CustomField>
    <fullName>DU_ActualEquity__c</fullName>
    <description>CDM: Stores the Equity for the current month of the related contract.
Availability 1.6.0.22</description>
    <inlineHelpText>Equity represents the difference of current market value of the car and current debt of the contract</inlineHelpText>
    <label>Actual Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>