force-app/main/default/objects/DU_Contract__c/fields/DU_ActualRenewalScore__c.field-meta.xml
<CustomField>
    <fullName>DU_ActualRenewalScore__c</fullName>
    <description>CDM: Stores the Renewal Score for the current month of the related contract.
Availability 1.6.0.22</description>
    <inlineHelpText>Actual Renewal Score represents the current probability of a customer to renew this contract.</inlineHelpText>
    <label>Actual Renewal Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>