force-app/main/default/objects/DU_Contract__c/fields/DU_AdvancedPaymentByCustomer__c.field-meta.xml
<CustomField>
    <fullName>DU_AdvancedPaymentByCustomer__c</fullName>
    <description>CDM: Payment, the customer did in advance</description>
    <inlineHelpText>Payment, the customer did in advance</inlineHelpText>
    <label>Advanced Payment by Customer​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>