force-app/main/default/objects/DU_Contract__c/fields/DU_AverageCosts__c.field-meta.xml
<CustomField>
    <fullName>DU_AverageCosts__c</fullName>
    <description>CDM: This field contains the average charging revenue of a member based on the last 10 transactions. This field is calculated in and provided by FastTrack.</description>
    <label>Average costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>