force-app/main/default/objects/DU_Contract__c/fields/DU_AverageVolume__c.field-meta.xml
<CustomField>
    <fullName>DU_AverageVolume__c</fullName>
    <description>CDM: This field contains the average charging in kWh of a member based on the last 10 transactions. This field is calculated in and provided by FastTrack.</description>
    <inlineHelpText>Consider the following units: Parking (min), charging (KWh), fueling (l)</inlineHelpText>
    <label>Average Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>