force-app/main/default/objects/DU_Contract__c/fields/DU_BalloonAmount__c.field-meta.xml
<CustomField>
    <fullName>DU_BalloonAmount__c</fullName>
    <description>CDM: Big last installment, which the customer should pay or refinance. Availability 2.1.0.2</description>
    <inlineHelpText>Big last installment, which the customer should pay or refinance.</inlineHelpText>
    <label>Balloon Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>