force-app/main/default/objects/DU_Contract__c/fields/DU_Brand__c.field-meta.xml
<CustomField>
    <fullName>DU_Brand__c</fullName>
    <description>CDM: Field to capture the legal entity who is contract partner of the related contract</description>
    <inlineHelpText>Field to capture the legal entity who is contract partner of the related contract</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SKODA</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>SEAT</fullName>
            </value>
            <value>
                <fullName>VW</fullName>
            </value>
            <value>
                <fullName>Porsche</fullName>
            </value>
            <value>
                <fullName>VW Commercial Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>