force-app/main/default/objects/DU_Contract__c/fields/DU_ContractFee__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractFee__c</fullName>
    <description>CDM: Monthly fee of the contract (joint field for lease, credit, B2B and B2C) in local currency​</description>
    <inlineHelpText>Monthly fee of the contract (joint field for lease, credit, B2B and B2C) in local currency</inlineHelpText>
    <label>Contract Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>