force-app/main/default/objects/DU_Contract__c/fields/DU_ContractTermActual__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractTermActual__c</fullName>
    <description>CDM: Stores the actual amount of months a contract is active for</description>
    <inlineHelpText>Stores the actual amount of months a contract is active for</inlineHelpText>
    <label>Actual Contract Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>