force-app/main/default/objects/DU_Contract__c/fields/DU_ContractTermPlanned__c.field-meta.xml
<CustomField>
    <fullName>DU_ContractTermPlanned__c</fullName>
    <description>CDM: Number of months that the contract is planned for</description>
    <inlineHelpText>Number of months that the contract is planned for</inlineHelpText>
    <label>Planned Contract Term</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>