force-app/main/default/objects/DU_Contract__c/fields/DU_CustomerResponsible__c.field-meta.xml
<CustomField>
    <fullName>DU_CustomerResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the contract to the responsible of the business customer</description>
    <inlineHelpText>Relates the contract to the responsible of the business customer</inlineHelpText>
    <label>Customer Responsible</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Customer Responsible)</relationshipLabel>
    <relationshipName>DU_ContractsCustomerResponsible</relationshipName>
    <type>Lookup</type>
</CustomField>