force-app/main/default/objects/DU_Contract__c/fields/DU_DateEndActual__c.field-meta.xml
<CustomField>
    <fullName>DU_DateEndActual__c</fullName>
    <description>CDM: Stores the date when contract is actually ended
Availability 1.6.0.13</description>
    <inlineHelpText>Stores the date when contract is actually ended.</inlineHelpText>
    <label>Actual End Date</label>
    <type>Date</type>
</CustomField>