force-app/main/default/objects/DU_Contract__c/fields/DU_DateEndPlanned__c.field-meta.xml
<CustomField>
    <fullName>DU_DateEndPlanned__c</fullName>
    <description>CDM: Stores the date when contract is planned to be ended
Availability 1.6.0.13</description>
    <inlineHelpText>Stores the date when contract is planned to be ended</inlineHelpText>
    <label>Planned End Date</label>
    <type>Date</type>
</CustomField>