force-app/main/default/objects/DU_Contract__c/fields/DU_DateFirstContractRate__c.field-meta.xml
<CustomField>
    <fullName>DU_DateFirstContractRate__c</fullName>
    <description>CDM: Stores the date when the first rate (payment) of a contract is due.</description>
    <inlineHelpText>Stores the date when the first rate (payment) of a contract is due.</inlineHelpText>
    <label>Date First Contract Rate</label>
    <type>Date</type>
</CustomField>