force-app/main/default/objects/DU_Contract__c/fields/DU_DateStartPlanned__c.field-meta.xml
<CustomField>
    <fullName>DU_DateStartPlanned__c</fullName>
    <description>CDM: Stores the date when contract is planned to be started
Availability 1.6.0.13</description>
    <inlineHelpText>Stores the date when contract is planned to be started</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>