force-app/main/default/objects/DU_Contract__c/fields/DU_DPStatus__c.field-meta.xml
<CustomField>
    <fullName>DU_DPStatus__c</fullName>
    <description>CDM: Stores the data processing status value from Customer Master Data System and will be used to hide the records from various user roles. Availability 2.1.0.2</description>
    <inlineHelpText>Stores the data processing status value from Customer Master Data System and will be used to hide the records from various user roles.</inlineHelpText>
    <label>DP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_DPStatus</valueSetName>
    </valueSet>
</CustomField>