force-app/main/default/objects/DU_Contract__c/fields/DU_EffectiveAnnualInterestRate__c.field-meta.xml
<CustomField>
    <fullName>DU_EffectiveAnnualInterestRate__c</fullName>
    <description>CDM: Effective Annual Interest Rate of the contract</description>
    <inlineHelpText>Effective Annual Interest Rate of the contract</inlineHelpText>
    <label>Effective Annual Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>