force-app/main/default/objects/DU_Contract__c/fields/DU_ExclusionDirectSales__c.field-meta.xml
<CustomField>
    <fullName>DU_ExclusionDirectSales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CDM: Flag. Blocker for List of Clients that CANNOT be included in  Direct Sales to Lessee Journey</description>
    <label>Direct Sales Exclusion</label>
    <type>Checkbox</type>
</CustomField>