force-app/main/default/objects/DU_Contract__c/fields/DU_ExternalContractNumber__c.field-meta.xml
<CustomField>
    <fullName>DU_ExternalContractNumber__c</fullName>
    <description>CDM: Contains the contract number of the source system of this record</description>
    <externalId>true</externalId>
    <inlineHelpText>Contains the contract number of the source system of this record</inlineHelpText>
    <label>External Contract Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>