force-app/main/default/objects/DU_Contract__c/fields/DU_GrossCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>DU_GrossCreditAmount__c</fullName>
    <description>CDM: Gross amount of the credit contract​</description>
    <inlineHelpText>Gross amount of the credit contract</inlineHelpText>
    <label>Gross Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>