force-app/main/default/objects/DU_Contract__c/fields/DU_Guarantor__c.field-meta.xml
<CustomField>
    <fullName>DU_Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the contract (DU_Contract__c) to the guarantor</description>
    <inlineHelpText>Link between contract and guarantor</inlineHelpText>
    <label>Guarantor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>VWFS CRM Person Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Guarantor)</relationshipLabel>
    <relationshipName>DU_ContractsGuarantor</relationshipName>
    <type>Lookup</type>
</CustomField>