force-app/main/default/objects/DU_Contract__c/fields/DU_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>DU_LegalEntity__c</fullName>
    <description>CDM: Field to capture the legal entity who is contract partner of the related contract</description>
    <inlineHelpText>Field to capture the legal entity who is contract partner of the related contract</inlineHelpText>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_LegalEntity</valueSetName>
    </valueSet>
</CustomField>