force-app/main/default/objects/DU_Contract__c/fields/DU_LetContractRenewalFlowRun__c.field-meta.xml
<CustomField>
    <fullName>DU_LetContractRenewalFlowRun__c</fullName>
    <description>CDM: A time frame to start a renewal process for contracts.</description>
    <formula>!ISBLANK(DU_DateEndActual__c) &amp;&amp; DU_DateEndActual__c &gt;= TODAY() + 10 &amp;&amp; DU_DateEndActual__c &lt;= TODAY() + 32</formula>
    <label>Let the Contract Renewal Flow Run</label>
    <type>Checkbox</type>
</CustomField>