force-app/main/default/objects/DU_Contract__c/fields/DU_LetDstlContractRenewalRun__c.field-meta.xml
<CustomField>
    <fullName>DU_LetDstlContractRenewalRun__c</fullName>
    <description>CDM: A time frame to start a renewal process for DSTL contracts.</description>
    <formula>AND 
( DU_PlannedDirectSalesDate__c &lt;  TODAY() ,
  MONTH(DU_PlannedDirectSalesDate__c) = MONTH(TODAY())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Let Dstl Contract Renewal Run</label>
    <type>Checkbox</type>
</CustomField>