force-app/main/default/objects/DU_Contract__c/fields/DU_NominalInterestRate__c.field-meta.xml
<CustomField>
    <fullName>DU_NominalInterestRate__c</fullName>
    <description>CDM: Stores the nominal interest rate of the contract</description>
    <inlineHelpText>Stores the nominal interest rate of the contract</inlineHelpText>
    <label>Nominal Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>