force-app/main/default/objects/DU_Contract__c/fields/DU_OptimalEquity__c.field-meta.xml
<CustomField>
    <fullName>DU_OptimalEquity__c</fullName>
    <description>CDM: Stores the Equity value for the optimal renewal date (month/year) of the related contract.
Availability 1.6.0.22</description>
    <inlineHelpText>Predicted Equity amount at optimal renewal date</inlineHelpText>
    <label>Optimal Renewal Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>