force-app/main/default/objects/DU_Contract__c/fields/DU_OptimalRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>DU_OptimalRenewalDate__c</fullName>
    <description>CDM Stores the date (month/year) of the optimal point in time to address a renewal.
Availability 1.6.0.22</description>
    <inlineHelpText>Optimal point in time derived by Renewal Score and Equity prediction within the next 12 months to approach a customer for Renewal.</inlineHelpText>
    <label>Optimal Renewal Date</label>
    <type>Date</type>
</CustomField>