force-app/main/default/objects/DU_Contract__c/fields/DU_OptimalRenewalScore__c.field-meta.xml
<CustomField>
    <fullName>DU_OptimalRenewalScore__c</fullName>
    <description>CDM: Stores the Renewal Score for the optimal renewal date (month/year) of the related contract.
Availability 1.6.0.22</description>
    <inlineHelpText>Predicted Renewal Score at optimal renewal date</inlineHelpText>
    <label>Optimal Renewal Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>