force-app/main/default/objects/DU_Contract__c/fields/DU_PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>DU_PaymentFrequency__c</fullName>
    <description>CDM: Time between two installments according to the contract.</description>
    <inlineHelpText>Time between two installments according to the contract.</inlineHelpText>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Off</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>