force-app/main/default/objects/DU_Contract__c/fields/DU_PlannedDirectSalesDate__c.field-meta.xml
<CustomField>
    <fullName>DU_PlannedDirectSalesDate__c</fullName>
    <description>CDM: Default date of Direct Sales Opportunity Creation. Timeframe is configurable by the local SF Admin of the market using Custom metadata DU_Settings and their entry DU_PlannedDirectSalesDate</description>
    <formula>ADDMONTHS( DU_DateEndPlanned__c , VALUE( $CustomMetadata.DU_Settings__mdt.DU_PlannedDirectSalesDate.DU_Value__c )* (-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when system will automatically create Direct Sales Opportunity for the Contract.</inlineHelpText>
    <label>Planned Direct Sales Date</label>
    <type>Date</type>
</CustomField>