force-app/main/default/objects/DU_Contract__c/fields/DU_PlannedRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>DU_PlannedRenewalDate__c</fullName>
    <description>CDM: Default renewal date for this contract, e.g., 6 month. Timeframe is configurable by the local SF Admin of the market using Custom metadata DU_Settings__mdt, record CDM_StandardContractRenewalPeriod. Availability 2.1.0.6</description>
    <formula>ADDMONTHS( DU_DateEndPlanned__c,
IF( ISNUMBER( $CustomMetadata.DU_Settings__mdt.CDM_StandardContractRenewalPeriod.DU_Value__c ), -1*VALUE($CustomMetadata.DU_Settings__mdt.CDM_StandardContractRenewalPeriod.DU_Value__c), -6))</formula>
    <inlineHelpText>Default renewal date for this contract, e.g., 6 month. Timeframe is configurable by the local SF Admin of the market using Custom metadata DU_Settings__mdt, record CDM_StandardContractRenewalPeriod.</inlineHelpText>
    <label>Planned Renewal Date</label>
    <type>Date</type>
</CustomField>