force-app/main/default/objects/DU_Contract__c/fields/DU_ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>DU_ProductGroup__c</fullName>
    <description>CDM: Contains the VWFS product group of the contract e.g. Finance, Leasing, Insurance, Service</description>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_ProductGroup</valueSetName>
    </valueSet>
</CustomField>