force-app/main/default/objects/DU_Contract__c/fields/DU_ProductID__c.field-meta.xml
<CustomField>
    <fullName>DU_ProductID__c</fullName>
    <description>CDM: Contains the VWFS product ID with the following format: xx.yy.zz</description>
    <inlineHelpText>Contains the VWFS product ID with the following format: xx.yy.zz</inlineHelpText>
    <label>Product ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>