force-app/main/default/objects/DU_Contract__c/fields/DU_ProductType__c.field-meta.xml
<CustomField>
    <fullName>DU_ProductType__c</fullName>
    <description>CDM: Contains the VWFS sub product group of the contract, e.g. for Leasing: Finance Lease, Operate Lease, ...</description>
    <inlineHelpText>Contains the VWFS sub product group of the contract, e.g. for Leasing: Finance Lease, Operate Lease, ...</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DU_ProductGroup__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DU_ProductType</valueSetName>
    </valueSet>
</CustomField>