force-app/main/default/objects/DU_Contract__c/fields/DU_ProvidingPartnerResponsible__c.field-meta.xml
<CustomField>
    <fullName>DU_ProvidingPartnerResponsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates to the responsible employee of the providing partner (dealer)</description>
    <inlineHelpText>Relates to the responsible employee of the providing partner (dealer)</inlineHelpText>
    <label>Providing Partner Responsible</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Providing Partner Responsible)</relationshipLabel>
    <relationshipName>DU_ContractsProvidingPartnerResponsible</relationshipName>
    <type>Lookup</type>
</CustomField>