force-app/main/default/objects/DU_Contract__c/fields/DU_RemainingTermMonthsPlanned__c.field-meta.xml
<CustomField>
    <fullName>DU_RemainingTermMonthsPlanned__c</fullName>
    <description>CDM: Demonstrates the planned remaining term in months</description>
    <formula>CEILING((DU_DateEndPlanned__c - TODAY()) / 365 * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Demonstrates the planned remaining term in months</inlineHelpText>
    <label>Remaining term in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>