force-app/main/default/objects/DU_Contract__c/fields/DU_RenewalOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DU_RenewalOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Automatically created renewal opportunity. Availability 2.1.0.6</description>
    <inlineHelpText>Automatically created renewal opportunity.</inlineHelpText>
    <label>Renewal Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Product opportunity is allowed in this relationship.</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Product Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts (Renewal Opportunity)</relationshipLabel>
    <relationshipName>DU_ContractsForRenewalOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>