force-app/main/default/objects/DU_Contract__c/fields/DU_SourceOpportunity__c.field-meta.xml
<CustomField>
    <fullName>DU_SourceOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: Relates the contract to the source opportunity</description>
    <inlineHelpText>Relates the contract to the source opportunity</inlineHelpText>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>DU_ContractsSourceOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>