force-app/main/default/objects/DU_Contract__c/fields/DU_Status__c.field-meta.xml
<CustomField>
    <fullName>DU_Status__c</fullName>
    <description>CDM: Holds the status of the record, values are (Draft/Active/Inactive)</description>
    <inlineHelpText>Holds the status of the record, values are (Draft/Active/Inactive)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>