force-app/main/default/objects/DU_Contract__c/fields/DU_TotalCosts__c.field-meta.xml
<CustomField>
    <fullName>DU_TotalCosts__c</fullName>
    <description>CDM: This field contains the total charging transaction price</description>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>