force-app/main/default/objects/DU_Contract__c/fields/DU_TotalRevenueLastYear__c.field-meta.xml
<CustomField>
    <fullName>DU_TotalRevenueLastYear__c</fullName>
    <description>CDM: This field contains the accumulated total parking revenue of a member in the last year. This field is calculated in and provided by FastTrack.</description>
    <label>Total Revenue Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>