force-app/main/default/objects/DU_Contract__c/fields/DU_TotalVolume__c.field-meta.xml
<CustomField>
    <fullName>DU_TotalVolume__c</fullName>
    <description>CDM: This field contains the charging in kWh per charging transaction</description>
    <inlineHelpText>Consider the following units: Parking (min), charging (KWh), fueling (l)</inlineHelpText>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>