force-app/main/default/objects/DU_Contract__c/fields/DU_TotalVolumeLastYear__c.field-meta.xml
<CustomField>
    <fullName>DU_TotalVolumeLastYear__c</fullName>
    <description>CDM: This field contains the accumulated total parking duration in minutes in the last year. This field is calculated in and provided by FastTrack.</description>
    <inlineHelpText>Consider the following units: Parking (min), charging (KWh), fueling (l)</inlineHelpText>
    <label>Total Volume Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>