force-app/main/default/objects/DU_Contract__c/fields/DU_Unit__c.field-meta.xml
<CustomField>
    <fullName>DU_Unit__c</fullName>
    <description>CDM : This field contains the unit of aggregated values of this contract.</description>
    <formula>CASE(  DU_ProductType__c  , 

&quot;99.02.01&quot;, &quot;Minutes&quot;, 
&quot;99.02.02&quot;, &quot;KWh&quot;,
&quot;99.02.03&quot;,&quot;Liter&quot; ,
&quot;&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>