force-app/main/default/objects/DU_Contract__c/validationRules/DU_Contract_Name_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_Contract_Name_Update</fullName>
    <active>true</active>
    <description>Only user with custom permission &apos;DU_ContractUpdateSkipValidation&apos; is allowed to change Contract name, Product Type and External Contract Number</description>
    <errorConditionFormula>AND(OR(ISCHANGED(DU_ProductType__c ),ISCHANGED(DU_ExternalContractNumber__c),ISCHANGED(Name)),NOT($Permission.DU_ContractUpdateSkipValidation))</errorConditionFormula>
    <errorMessage>Only AMS or Admin can change Contract name, Product Type and External Contract Number.</errorMessage>
</ValidationRule>