force-app/main/default/objects/DU_Contract__c/listViews/DU_All.listView-meta.xml
<ListView>
    <fullName>DU_All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>